--- a/index.html
+++ b/index.html
@@ -118,7 +118,8 @@
             </span>
               <!-- Video Link. -->
               <span class="link-block">
-                <a href="https://www.youtube.com/watch?v=fxf_ypd7eD8" class="external-link button is-normal is-rounded is-dark">
+               <a class="external-link button is-normal is-rounded is-dark"
+                   style="opacity: 0.6; cursor: not-allowed;">
                   <span class="icon">
                     <i class="fab fa-youtube"></i>
                   </span>
