--- a/index.html
+++ b/index.html
@@ -79,8 +79,6 @@
                 Hanjie Ma</a><sup>1</sup>,</span>
                <span class="author-block">
                 Guiyang Pu</a><sup>2,3</sup>,</span>
-                <span class="author-block">
-                Zhen Ye</a><sup>4</sup>,</span>
           </div>
 
           <!-- affiliations -->
@@ -89,7 +87,6 @@
             <sup>1</sup> Zhejiang Sci-Tech University &nbsp;
             <sup>2</sup> State Key Lab of CAD&CG, Zhejiang University &nbsp;
             <sup>3</sup> China Mobile (Hangzhou) Information Technology Co. Ltd &nbsp;
-            <sup>4</sup> Lishui University &nbsp;
 
 
           </div>
@@ -267,7 +264,15 @@
   <section class="section" id="BibTeX">
     <div class="container is-max-desktop content">
       <h2 class="title">BibTeX</h2>
-      <pre><code>{
+      <pre><code>{@misc{wu2025curigscurriculumguidedgaussiansplatting,
+      title={CuriGS: Curriculum-Guided Gaussian Splatting for Sparse View Synthesis}, 
+      author={Zijian Wu and Mingfeng Jiang and Zidian Lin and Ying Song and Hanjie Ma and Qun Wu and Dongping Zhang and Guiyang Pu},
+      year={2025},
+      eprint={2511.16030},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV},
+      url={https://arxiv.org/abs/2511.16030}, 
+}
       }</code></pre>
     </div>
   </section>
