--- a/index.html
+++ b/index.html
@@ -96,8 +96,10 @@
             <!-- <div class="publication-links"> -->
               <!-- PDF Link. -->
               <span class="link-block">
-               <a class="external-link button is-normal is-rounded is-dark"
-                   style="opacity: 0.6; cursor: not-allowed;">
+              <a class="external-link button is-normal is-rounded is-dark"
+                 href="https://arxiv.org/pdf/2511.16030"
+                 target="_blank"
+                 style="opacity: 1; cursor: pointer;">
                 <span class="icon">
                     <i class="fas fa-file-pdf"></i>
                 </span>
@@ -105,13 +107,16 @@
               </a>
               </span>
               <span class="link-block">
-               <a class="external-link button is-normal is-rounded is-dark"
-                   style="opacity: 0.6; cursor: not-allowed;">
+              <a class="external-link button is-normal is-rounded is-dark"
+                 href="https://arxiv.org/abs/2511.16030"
+                 target="_blank"
+                 style="opacity: 1; cursor: pointer;">
                 <span class="icon">
                     <i class="ai ai-arxiv"></i>
                 </span>
                 <span>arXiv</span>
               </a>
+
             </span>
               <!-- Video Link. -->
               <span class="link-block">
