--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
   <section class="section" id="BibTeX">
     <div class="container is-max-desktop content">
       <h2 class="title">BibTeX</h2>
-      <pre><code>{@misc{wu2025curigscurriculumguidedgaussiansplatting,
+      <pre><code>@misc{wu2025curigscurriculumguidedgaussiansplatting,
       title={CuriGS: Curriculum-Guided Gaussian Splatting for Sparse View Synthesis}, 
       author={Zijian Wu and Mingfeng Jiang and Zidian Lin and Ying Song and Hanjie Ma and Qun Wu and Dongping Zhang and Guiyang Pu},
       year={2025},
@@ -278,7 +278,7 @@
       primaryClass={cs.CV},
       url={https://arxiv.org/abs/2511.16030}, 
 }
-      }</code></pre>
+</code></pre>
     </div>
   </section>
   <!-- TODO: update the arxiv link and github -->
